--- a/test/expected/SquareDance/Square.vm
+++ b/test/expected/SquareDance/Square.vm
@@ -13,3 +13,22 @@ call Square.draw 1
 pop temp 0
 push pointer 0
 return
+function Square.draw 1
+push argument 0
+pop pointer 0
+push constant 0
+not
+call Screen.setColor 1
+pop temp 0
+push this 0
+push this 1
+push this 0
+push this 2
+add
+push this 1
+push this 2
+add
+call Screen.drawRectangle 4
+pop temp 0
+push constant 0
+return
