Add the next method in Square.jack and .vm

--- a/test/expected/SquareDance/Square.vm
+++ b/test/expected/SquareDance/Square.vm
@@ -13,6 +13,14 @@ call Square.draw 1
 pop temp 0
 push pointer 0
 return
+function Square.dispose 0
+push argument 0
+pop pointer 0
+push pointer 0
+call Memory.deAlloc 1
+pop temp 0
+push constant 0
+return
 function Square.draw 0
 push argument 0
 pop pointer 0
