Add the next method in Square.vm and .jack

--- a/test/expected/SquareDance/Square.vm
+++ b/test/expected/SquareDance/Square.vm
@@ -40,3 +40,21 @@ call Screen.drawRectangle 4
 pop temp 0
 push constant 0
 return
+function Square.erase 0
+push argument 0
+pop pointer 0
+push constant 0
+call Screen.setColor 1
+pop temp 0
+push this 0
+push this 1
+push this 0
+push this 2
+add
+push this 1
+push this 2
+add
+call Screen.drawRectangle 4
+pop temp 0
+push constant 0
+return
