--- a/test/expected/SquareDance/Square.vm
+++ b/test/expected/SquareDance/Square.vm
@@ -58,3 +58,35 @@ call Screen.drawRectangle 4
 pop temp 0
 push constant 0
 return
+function Square.incSize 0
+push argument 0
+pop pointer 0
+push this 1
+push this 2
+add
+push constant 254
+lt
+push this 0
+push this 2
+add
+push constant 510
+lt
+and
+if-goto IF_TRUE0
+goto IF_FALSE0
+label IF_TRUE0
+push pointer 0
+call Square.erase 1
+pop temp 0
+push this 2
+push constant 2
+add
+pop this 2
+push pointer 0
+call Square.draw 1
+pop temp 0
+goto IF_END0
+label IF_FALSE0
+label IF_END0
+push constant 0
+return
